fix staff menu appearing off screen

--- a/src/app/gameView/ActionMenu/StaffMenu/StaffMenu.scss
+++ b/src/app/gameView/ActionMenu/StaffMenu/StaffMenu.scss
@@ -1,12 +1,12 @@
 @use "../CombatMenu/CombatMenu.scss";
 
 .staff-menu {
+  width: 100%;
   height: 25%;
   min-height: 64px;
-  width: 100%;
 
   display: grid;
-  grid-template-columns: 40% auto 40%;
+  grid-template-columns: 40% auto;
   grid-template-rows: auto 64px;
   grid-template-areas:
     "a b"
